--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
       <h1 class="mb-4 mt-4">Home visit System</h1>
     </header>
     <nav class="container nav">
-      <a href="/new" class="btn btn-primary m-4">New Visit</a>
+      <a href="/visits/new" class="btn btn-primary m-4">New Visit</a>
       <form action="/" method="get" class="m-2">
         <button class="btn btn-primary" type="submit">Search</button>
         <input type="text" class="search" name="search" required />
@@ -25,10 +25,10 @@
         <input type="date" name="searchDate" id="searchDate" />
       </form>
     </nav>
-    <article class="container">
+    <article class=".container">
       <% visits.forEach((visit,i) =>{ %>
-      <div class="card container <%= visit.stat %>">
-        <a href="/visits/<%= visit._id %> " class="edit">
+      <div class="card .container <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
           <div class="card-body">
             <span class="count"><%= i+1 %> </span>
             <h6 class="card-title"><%= visit.name %></h6>
