--- a/views/visits/print.ejs
+++ b/views/visits/print.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
   <head>
-    <title><%= title %></title>
+    <title>print</title>
     <link rel="stylesheet" href="/stylesheets/print.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -11,7 +11,53 @@
     />
   </head>
   <body class="body">
-    <article class="container"></article>
-    <script src="javascripts/main.js"></script>
+    <div class="container">
+      <div class="visit-row">
+        <h3>الاسم</h3>
+        <p><%= visit.name %></p>
+      </div>
+      <div class="visit-row">
+        <h3>العنوان</h3>
+        <div>
+          <p>المنطقه:<%= visit.ragion %></p>
+          <p>اسم الشارع:<%= visit.stname %></p>
+          <p>رقم العماره:<%= visit.blnum %></p>
+          <p>رقم الدور:<%= visit.flnum %></p>
+          <p>رقم الشقه:<%= visit.donum %></p>
+          <p>علامه مميزه:<%= visit.spchilmark %></p>
+        </div>
+      </div>
+      <div class="visit-row">
+        <h3>التحاليل</h3>
+        <p><%= visit.tests %></p>
+      </div>
+      <div class="visit-row">
+        <h3>توقيت الزياره</h3>
+        <p><%= visit.createdAt %></p>
+      </div>
+      <div class="visit-row">
+        <h3>القيام بالزياره</h3>
+        <p><%= visit.date %> / <%= visit.time %></p>
+      </div>
+      <div class="visit-row">
+        <h3>متلقي الزياره</h3>
+        <p><%= visit.creater %></p>
+      </div>
+      <div class="visit-row">
+        <h3>القائم بالزياره</h3>
+        <p><%= visit.chimist %></p>
+      </div>
+      <div class="visit-row">
+        <h3>ملاحظات</h3>
+        <p><%= visit.nots %></p>
+      </div>
+      <div class="visit-row">
+        <h3>التكلفة</h3>
+        <p><%= visit.cost %></p>
+      </div>
+
+      <a href="/visits/edit/<%= visit.id %> " class="btn btn-success">edit</a>
+      <a href="/" class="btn btn-success">Home</a>
+    </div>
   </body>
 </html>
