--- a/views/visits/print.ejs
+++ b/views/visits/print.ejs
@@ -17,6 +17,12 @@
         <p><%= visit.name %></p>
       </div>
       <div class="visit-row">
+        <h3>رقم الهاتف</h3>
+        <div>
+          <p><%= visit.phoneNum1 %> - <%= visit.phoneNum2 %></p>
+        </div>
+      </div>
+      <div class="visit-row">
         <h3>العنوان</h3>
         <div>
           <p>المنطقه:<%= visit.ragion %></p>
