--- a/views/visits/_form_feild.ejs
+++ b/views/visits/_form_feild.ejs
@@ -114,11 +114,12 @@
     class="form-control mp-3"
     placeholder="تاريخ القيام بالزياره"
     id="time"
-    type="text"
+    type="number"
     name="time"
     required
     value="<%= visit.time %>"
   />
+
   <span class="input-group-text">-</span>
   <input
     class="form-control mp-3"
@@ -197,4 +198,66 @@
   />
   <label class="form-check-label" for="inlineRadio3">Normal</label>
 </div>
-<div></div>
+<!-- aria  -->
+<div>
+  <div class="form-check form-check-inline">
+    <input
+      class="form-check-input"
+      type="radio"
+      name="aria"
+      id="aria0"
+      value="0"
+    />
+    <label class="form-check-label" for="aria0">العحمي</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input
+      class="form-check-input"
+      type="radio"
+      name="aria"
+      id="aria1"
+      value="1"
+    />
+    <label class="form-check-label" for="aria1">الاولي</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input
+      class="form-check-input"
+      type="radio"
+      name="aria"
+      id="aria2"
+      value="2"
+    />
+    <label class="form-check-label" for="aria2">الثانية</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input
+      class="form-check-input"
+      type="radio"
+      name="aria"
+      id="aria3"
+      value="3"
+    />
+    <label class="form-check-label" for="aria3">الثالثة</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input
+      class="form-check-input"
+      type="radio"
+      name="aria"
+      id="aria4"
+      value="4"
+    />
+    <label class="form-check-label" for="aria4">الرابعة</label>
+  </div>
+  <div class="form-check form-check-inline">
+    <input
+      class="form-check-input"
+      type="radio"
+      name="aria"
+      id="aria5"
+      value="5"
+    />
+    <label class="form-check-label" for="aria5">مسحة</label>
+  </div>
+</div>
