--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -1,12 +1,42 @@
 .body {
   background-color: #f0f6fd;
+  font-family: 'Cairo', sans-serif;
+  font-family: 'Tajawal', sans-serif;
+}
+.container {
+  margin: 20px auto !important;
+  border-top: 1px solid black !important;
+  border-left: 1px solid black !important;
+  border-right: 1px solid black !important;
+  padding: 0px !important;
 }
 .visit-row {
+  box-sizing: border-box;
   display: flex;
   align-items: center;
-  margin-bottom: 5px;
+
+  padding: 2px;
+
   border-bottom: 1px solid black;
 }
-h3 {
+h6 {
   width: 200px;
+  margin: 0px !important;
+  font-weight: bold !important;
+  text-align: center !important;
+}
+.buuton {
+  text-align: center;
+}
+@media print {
+  .buuton {
+    display: none;
+  }
+  .container {
+    margin: 20px auto !important;
+    border-top: 1px solid black !important;
+    border-left: 1px solid black !important;
+    border-right: 1px solid black !important;
+    padding: 0px !important;
+  }
 }
