--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
   <head>
-    <title><%= title %></title>
+    <title>Home visit</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700&family=Tajawal:wght@300;400;500;700;800&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body class="body">
@@ -25,15 +31,19 @@
         <input type="date" name="searchDate" id="searchDate" />
       </form>
     </nav>
-    <article class=".container">
+    <article class="container">
+      <% if (visits.length ===0) { %>
+      <h6 class="no-v">لم يتم حجز اي زيارات</h6>
+      <% } else { %>
+      <h4 class="v-heading">زيارات <%= visits[0].date %></h4>
       <% visits.forEach((visit,i) =>{ %>
-      <div class="card .container <%= visit.stat %>">
+      <div class="card container <%= visit.stat %>">
         <a href="/visits/print/<%= visit._id %> " class="edit">
           <div class="card-body">
             <span class="count"><%= i+1 %> </span>
             <h6 class="card-title"><%= visit.name %></h6>
-            <p class="text-muted"><%= visit.phoneNum1 %></p>
             <p class="text-muted"><%= visit.ragion %></p>
+            <p class="text-muted"><%= visit.phoneNum1 %></p>
             <p class="text-muted"><%= visit.time %></p>
             <p class="text-muted"><%= visit.date %></p>
             <p class="text-muted"><%= visit.chimist %></p>
@@ -41,7 +51,7 @@
           </div>
         </a>
       </div>
-      <% }) %>
+      <% }) %> <% } %>
     </article>
     <script src="/javascripts/main.js"></script>
   </body>
