--- a/views/visits/print.ejs
+++ b/views/visits/print.ejs
@@ -28,12 +28,12 @@
       <div class="visit-row">
         <h6>العنوان</h6>
         <div>
-          <p>المنطقه:<%= visit.ragion %></p>
-          <p>اسم الشارع:<%= visit.stname %></p>
-          <p>رقم العماره:<%= visit.blnum %></p>
-          <p>رقم الدور:<%= visit.flnum %></p>
-          <p>رقم الشقه:<%= visit.donum %></p>
-          <p>علامه مميزه:<%= visit.spchilmark %></p>
+          <p>المنطقه  :   <%= visit.ragion %></p>
+          <p>اسم الشارع :    <%= visit.stname %></p>
+          <p> العماره :    <%= visit.blnum %></p>
+          <p> الدور :    <%= visit.flnum %></p>
+          <p>   الشقه :    <%= visit.donum %></p>
+          <p>علامه مميزه  :   <%= visit.spchilmark %></p>
         </div>
       </div>
       <div class="visit-row">
@@ -46,7 +46,7 @@
       </div>
       <div class="visit-row">
         <h6>القيام بالزياره</h6>
-        <p> <h6>الساعة</h6> <%= visit.time %>  <h6>يوم</h6> <%= visit.date %></p>
+        <p> <h5>الساعة</h5>   <%=   visit.time %>  <h5>يوم</h5> <%= visit.date %></p>
       </div>
       <div class="visit-row">
         <h6>متلقي الزياره</h6>
