--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -9,6 +9,16 @@
   border-left: 1px solid black !important;
   border-right: 1px solid black !important;
   padding: 0px !important;
+  position: relative;
+}
+.container::after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 1px;
+  right: 130px;
+  top: 0px;
+  background-color: black;
 }
 .visit-row {
   box-sizing: border-box;
@@ -20,13 +30,19 @@
   border-bottom: 1px solid black;
 }
 h6 {
-  width: 200px;
+  width: 150px;
   margin: 0px !important;
   font-weight: bold !important;
-  text-align: center !important;
+  padding-right: 10px;
 }
 .buuton {
   text-align: center;
+}
+h5 {
+  margin: 0px 10px;
+}
+p {
+  text-align: start;
 }
 @media print {
   .buuton {
