--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,18 +36,27 @@
       <h6 class="no-v">لم يتم حجز اي زيارات</h6>
       <% } else { %>
       <h4 class="v-heading">زيارات <%= visits[0].date %></h4>
+      <div class="card-body hed">
+        <h4 class="card-title">اسم العميل</h4>
+        <h4 class="card-title">المنطقه</h4>
+        <h4 class="card-title">رقم الهاتف</h4>
+        <h4 class="card-title">توقيت الزياره</h4>
+        <h4 class="card-title">تاريخ الزياره</h4>
+        <h4 class="card-title">اسم الكميائي</h4>
+        <h4 class="card-title">اجمالي التكلفه</h4>
+      </div>
       <% visits.forEach((visit,i) =>{ %>
       <div class="card container <%= visit.stat %>">
         <a href="/visits/print/<%= visit._id %> " class="edit">
           <div class="card-body">
             <span class="count"><%= i+1 %> </span>
             <h6 class="card-title"><%= visit.name %></h6>
-            <p class="text-muted"><%= visit.ragion %></p>
-            <p class="text-muted"><%= visit.phoneNum1 %></p>
-            <p class="text-muted"><%= visit.time %></p>
-            <p class="text-muted"><%= visit.date %></p>
-            <p class="text-muted"><%= visit.chimist %></p>
-            <p class="text-muted"><%= visit.cost %></p>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <p class="card-title"><%= visit.time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
           </div>
         </a>
       </div>
