--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,9 @@
 <html dir="rtl" lang="ar">
   <head>
     <title>Home visit</title>
+    <link rel="icon" href="/images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,10 +33,16 @@
         <input type="date" name="searchDate" id="searchDate" />
       </form>
     </nav>
-    <article class="container">
+    <article class="container-xl">
       <% if (visits.length ===0) { %>
       <h6 class="no-v">لم يتم حجز اي زيارات</h6>
       <% } else { %>
+      <div class="hide">
+        <div class="logo">
+          <img src="/images/logo.png" alt="" />
+          <p>testing Lorem ipsum dolor</p>
+        </div>
+      </div>
       <h4 class="v-heading">زيارات <%= visits[0].date %></h4>
       <div class="card-body hed">
         <h4 class="card-title">اسم العميل</h4>
@@ -46,7 +54,7 @@
         <h4 class="card-title">اجمالي التكلفه</h4>
       </div>
       <% visits.forEach((visit,i) =>{ %>
-      <div class="card container <%= visit.stat %>">
+      <div class="card container-xl <%= visit.stat %>">
         <a href="/visits/print/<%= visit._id %> " class="edit">
           <div class="card-body">
             <span class="count"><%= i+1 %> </span>
