--- a/views/visits/new.ejs
+++ b/views/visits/new.ejs
@@ -2,6 +2,7 @@
 <html dir="rtl" lang="ar">
   <head>
     <title>New visit</title>
+    <link rel="icon" href="/images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
