--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,10 @@ h4 {
 .no-v {
   text-align: center;
   color: blue;
+  padding: 10px;
+  border-bottom: 1px solid black;
+  font-size: 20px;
+  font-weight: bold;
 }
 .edit {
   text-decoration: none;
