time list aupdate

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,7 +62,7 @@
             <h6 class="card-title"><%= visit.name %></h6>
             <p class="card-title"><%= visit.ragion %></p>
             <p class="card-title"><%= visit.phoneNum1 %></p>
-            <p class="card-title"><%= visit.time %></p>
+            <p class="card-title"><%= visit.time.slice(-9) %></p>
             <p class="card-title"><%= visit.date %></p>
             <p class="card-title"><%= visit.chimist %></p>
             <p class="card-title"><%= visit.cost %></p>
