--- a/views/visits/_form_feild.ejs
+++ b/views/visits/_form_feild.ejs
@@ -110,7 +110,7 @@
 
 <!-- الوقت  -->
 <div class="input-group mb-3">
-  <input
+  <!-- <input
     class="form-control mp-3"
     placeholder="تاريخ القيام بالزياره"
     id="time"
@@ -118,7 +118,22 @@
     name="time"
     required
     value="<%= visit.time %>"
-  />
+  /> -->
+  <select class="form-select" aria-label="Default select example" name="time">
+    <option selected><%= visit.time %></option>
+    <option value="0-8:00-8:30">8:00-8:30</option>
+    <option value="1-9:00-9:30">9:00-9:30</option>
+    <option value="2-10:00-10:30">10:00-10:30</option>
+    <option value="3-11:00-11:30">11:00-11:30</option>
+    <option value="4-12:00-12:30">12:00-12:30</option>
+    <option value="4-1:00-1:30">1:00-1:30</option>
+    <option value="5-2:00-2:30">2:00-2:30</option>
+    <option value="7-3:00-3:30">3:00-3:30</option>
+    <option value="8-4:00-4:30">4:00-4:30</option>
+    <option value="9-5:00-5:30">5:00-5:30</option>
+    <option value="90-6:00-6:30">6:00-6:30</option>
+    <option value="900-7:00-7:30">7:00-7:30</option>
+  </select>
 
   <span class="input-group-text">-</span>
   <input
