--- a/views/visits/_form_feild.ejs
+++ b/views/visits/_form_feild.ejs
@@ -126,13 +126,13 @@
     <option value="2-10:00-10:30">10:00-10:30</option>
     <option value="3-11:00-11:30">11:00-11:30</option>
     <option value="4-12:00-12:30">12:00-12:30</option>
-    <option value="4-1:00-1:30">1:00-1:30</option>
-    <option value="5-2:00-2:30">2:00-2:30</option>
+    <option value="5-1:00-1:30">1:00-1:30</option>
+    <option value="6-2:00-2:30">2:00-2:30</option>
     <option value="7-3:00-3:30">3:00-3:30</option>
     <option value="8-4:00-4:30">4:00-4:30</option>
     <option value="9-5:00-5:30">5:00-5:30</option>
     <option value="90-6:00-6:30">6:00-6:30</option>
-    <option value="900-7:00-7:30">7:00-7:30</option>
+    <option value="91-7:00-7:30">7:00-7:30</option>
   </select>
 
   <span class="input-group-text">-</span>
@@ -200,6 +200,7 @@
     name="stat"
     id="inlineRadio2"
     value="yellow"
+    required
   />
   <label class="form-check-label" for="inlineRadio2">In Call</label>
 </div>
@@ -210,6 +211,7 @@
     name="stat"
     id="inlineRadio3"
     value="white"
+    required
   />
   <label class="form-check-label" for="inlineRadio3">Normal</label>
 </div>
@@ -222,6 +224,7 @@
       name="aria"
       id="aria0"
       value="0"
+      required
     />
     <label class="form-check-label" for="aria0">العحمي</label>
   </div>
@@ -232,6 +235,7 @@
       name="aria"
       id="aria1"
       value="1"
+      required
     />
     <label class="form-check-label" for="aria1">الاولي</label>
   </div>
@@ -242,6 +246,7 @@
       name="aria"
       id="aria2"
       value="2"
+      required
     />
     <label class="form-check-label" for="aria2">الثانية</label>
   </div>
@@ -252,6 +257,7 @@
       name="aria"
       id="aria3"
       value="3"
+      required
     />
     <label class="form-check-label" for="aria3">الثالثة</label>
   </div>
@@ -262,6 +268,7 @@
       name="aria"
       id="aria4"
       value="4"
+      required
     />
     <label class="form-check-label" for="aria4">الرابعة</label>
   </div>
@@ -272,6 +279,7 @@
       name="aria"
       id="aria5"
       value="5"
+      required
     />
     <label class="form-check-label" for="aria5">مسحة</label>
   </div>
