--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,11 +73,51 @@
         <h4 class="card-title">اسم الكميائي</h4>
         <h4 class="card-title">اجمالي التكلفه</h4>
       </div>
-      <% visits.forEach((visit,i) =>{ %>
-        <div class="card container-xl <%= visit.stat %>">
+    
+
+      <% agmie.forEach((v,i) => { %> <% v.forEach(visit => { %>
+      <div class="card container-xl <%= visit.stat %> ">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
+          </div>
+        </a>
+      </div>
+      <% }) %> <% }) %>
+       <% areaone.forEach((v,i) => { %>
+        <% v.forEach(visit => { %>
+          <div class="card container-xl <%= visit.stat %>">
+            <a href="/visits/print/<%= visit._id %> " class="edit">
+              <div class="card-body">
+                <h6 class="card-title"><%= visit.name %></h6>
+                <p class="card-title"><%= visit.ragion %></p>
+                <p class="card-title"><%= visit.phoneNum1 %></p>
+                <% let time= '' %> <% if (visit.time.length===13) { %> <%
+                time=visit.time.slice(2) %> <% } else { %> <%
+                time=visit.time.slice(-9) %> <% } %>
+                <p class="card-title"><%= time %></p>
+                <p class="card-title"><%= visit.date %></p>
+                <p class="card-title"><%= visit.chimist %></p>
+                <p class="card-title"><%= visit.cost %></p>
+              </div>
+            </a>
+          </div>
+        <% }) %>
+      <% }) %> 
+      <% areatwo.forEach((v,i) => { %>
+      <% v.forEach(visit => { %>
+        <div class="card container-xl <%= visit.stat %> ">
           <a href="/visits/print/<%= visit._id %> " class="edit">
             <div class="card-body">
-              <span class="count"><%= i+1 %> </span>
               <h6 class="card-title"><%= visit.name %></h6>
               <p class="card-title"><%= visit.ragion %></p>
               <p class="card-title"><%= visit.phoneNum1 %></p>
@@ -91,9 +131,89 @@
             </div>
           </a>
         </div>
-        <% }) %> <% } %>
+      <% }) %>
+      <% }) %>
+      <% areathree.forEach((v,i) => { %>
+      <% v.forEach(visit => { %>
+        <div class="card container-xl <%= visit.stat %>">
+          <a href="/visits/print/<%= visit._id %> " class="edit">
+            <div class="card-body">
+              <h6 class="card-title"><%= visit.name %></h6>
+              <p class="card-title"><%= visit.ragion %></p>
+              <p class="card-title"><%= visit.phoneNum1 %></p>
+              <% let time= '' %> <% if (visit.time.length===13) { %> <%
+              time=visit.time.slice(2) %> <% } else { %> <%
+              time=visit.time.slice(-9) %> <% } %>
+              <p class="card-title"><%= time %></p>
+              <p class="card-title"><%= visit.date %></p>
+              <p class="card-title"><%= visit.chimist %></p>
+              <p class="card-title"><%= visit.cost %></p>
+            </div>
+          </a>
+        </div>
+      <% }) %>
+      <% }) %>
+      <% areafour.forEach((v,i) => { %>
+      <% v.forEach(visit => { %>
+        <div class="card container-xl <%= visit.stat %> ">
+          <a href="/visits/print/<%= visit._id %> " class="edit">
+            <div class="card-body ">
+              <h6 class="card-title"><%= visit.name %></h6>
+              <p class="card-title"><%= visit.ragion %></p>
+              <p class="card-title"><%= visit.phoneNum1 %></p>
+              <% let time= '' %> <% if (visit.time.length===13) { %> <%
+              time=visit.time.slice(2) %> <% } else { %> <%
+              time=visit.time.slice(-9) %> <% } %>
+              <p class="card-title"><%= time %></p>
+              <p class="card-title"><%= visit.date %></p>
+              <p class="card-title"><%= visit.chimist %></p>
+              <p class="card-title"><%= visit.cost %></p>
+            </div>
+          </a>
+        </div>
+      <% }) %>
+      <% }) %>
+      <% swaps.forEach((v,i) => { %>
+      <% v.forEach(visit => { %>
+        <div class="card container-xl <%= visit.stat %>">
+          <a href="/visits/print/<%= visit._id %> " class="edit">
+            <div class="card-body">
+              <h6 class="card-title"><%= visit.name %></h6>
+              <p class="card-title"><%= visit.ragion %></p>
+              <p class="card-title"><%= visit.phoneNum1 %></p>
+              <% let time= '' %> <% if (visit.time.length===13) { %> <%
+              time=visit.time.slice(2) %> <% } else { %> <%
+              time=visit.time.slice(-9) %> <% } %>
+              <p class="card-title"><%= time %></p>
+              <p class="card-title"><%= visit.date %></p>
+              <p class="card-title"><%= visit.chimist %></p>
+              <p class="card-title"><%= visit.cost %></p>
+            </div>
+          </a>
+        </div>
+      <% }) %>
+      <% }) %>
+      <% } %>
     </article>
-    <%= typeof visits %>
+    <!-- <% visits.forEach((visit,i) =>{ %>
+      <div class="card container-xl <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <span class="count"><%= i+1 %> </span>
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
+          </div>
+        </a>
+      </div>
+      <% }) %>  -->
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
