--- a/views/visits/edit.ejs
+++ b/views/visits/edit.ejs
@@ -16,8 +16,8 @@
       <h1 class="mb-4">New Visit</h1>
       <form action="/visits/edit/<%= visit._id %>" method="post">
         <%-include("_form_feild") %>
+        <button type="submit" class="btn btn-success mt-4">Save</button>
         <a href="/" class="btn btn-secondary mt-4">Home</a>
-        <button type="submit" class="btn btn-success mt-4">Edit</button>
       </form>
     </div>
   </body>
