--- a/views/visits/print.ejs
+++ b/views/visits/print.ejs
@@ -74,6 +74,7 @@
     </div>
     <div class="buuton">
       <a href="/visits/edit/<%= visit.id %> " class="btn btn-success">edit</a>
+      <a href="/visits/newvisit/<%= visit.id %> " class="btn btn-success">New Visit</a>
       <a href="/" class="btn btn-success">Home</a>
     </div>
   </body>
