--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -45,17 +45,20 @@ h5 {
 p {
   text-align: start;
   font-size: large;
- 
 }
 @media print {
   .buuton {
     display: none;
   }
   .container {
-    margin: 20px auto !important;
+    margin: 50px auto !important;
     border-top: 1px solid black !important;
     border-left: 1px solid black !important;
     border-right: 1px solid black !important;
-    padding: 0px !important;
+    padding: 5px !important;
+  }
+  @page {
+    size: auto;
+    margin: 0;
   }
 }
