--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
     <title>Home visit</title>
     <link rel="icon" href="/images/favicon.png" type="image/png" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -73,10 +74,9 @@
         <h4 class="card-title">اسم الكميائي</h4>
         <h4 class="card-title">اجمالي التكلفه</h4>
       </div>
-    
 
       <% agmie.forEach((v,i) => { %> <% v.forEach(visit => { %>
-      <div class="card container-xl <%= visit.stat %> ">
+      <div class="card container-xl <%= visit.stat %>">
         <a href="/visits/print/<%= visit._id %> " class="edit">
           <div class="card-body">
             <h6 class="card-title"><%= visit.name %></h6>
@@ -92,110 +92,99 @@
           </div>
         </a>
       </div>
-      <% }) %> <% }) %>
-       <% areaone.forEach((v,i) => { %>
-        <% v.forEach(visit => { %>
-          <div class="card container-xl <%= visit.stat %>">
-            <a href="/visits/print/<%= visit._id %> " class="edit">
-              <div class="card-body">
-                <h6 class="card-title"><%= visit.name %></h6>
-                <p class="card-title"><%= visit.ragion %></p>
-                <p class="card-title"><%= visit.phoneNum1 %></p>
-                <% let time= '' %> <% if (visit.time.length===13) { %> <%
-                time=visit.time.slice(2) %> <% } else { %> <%
-                time=visit.time.slice(-9) %> <% } %>
-                <p class="card-title"><%= time %></p>
-                <p class="card-title"><%= visit.date %></p>
-                <p class="card-title"><%= visit.chimist %></p>
-                <p class="card-title"><%= visit.cost %></p>
-              </div>
-            </a>
+      <% }) %> <% }) %> <% areaone.forEach((v,i) => { %> <% v.forEach(visit => {
+      %>
+      <div class="card container-xl <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
           </div>
-        <% }) %>
-      <% }) %> 
-      <% areatwo.forEach((v,i) => { %>
-      <% v.forEach(visit => { %>
-        <div class="card container-xl <%= visit.stat %> ">
-          <a href="/visits/print/<%= visit._id %> " class="edit">
-            <div class="card-body">
-              <h6 class="card-title"><%= visit.name %></h6>
-              <p class="card-title"><%= visit.ragion %></p>
-              <p class="card-title"><%= visit.phoneNum1 %></p>
-              <% let time= '' %> <% if (visit.time.length===13) { %> <%
-              time=visit.time.slice(2) %> <% } else { %> <%
-              time=visit.time.slice(-9) %> <% } %>
-              <p class="card-title"><%= time %></p>
-              <p class="card-title"><%= visit.date %></p>
-              <p class="card-title"><%= visit.chimist %></p>
-              <p class="card-title"><%= visit.cost %></p>
-            </div>
-          </a>
-        </div>
-      <% }) %>
-      <% }) %>
-      <% areathree.forEach((v,i) => { %>
-      <% v.forEach(visit => { %>
-        <div class="card container-xl <%= visit.stat %>">
-          <a href="/visits/print/<%= visit._id %> " class="edit">
-            <div class="card-body">
-              <h6 class="card-title"><%= visit.name %></h6>
-              <p class="card-title"><%= visit.ragion %></p>
-              <p class="card-title"><%= visit.phoneNum1 %></p>
-              <% let time= '' %> <% if (visit.time.length===13) { %> <%
-              time=visit.time.slice(2) %> <% } else { %> <%
-              time=visit.time.slice(-9) %> <% } %>
-              <p class="card-title"><%= time %></p>
-              <p class="card-title"><%= visit.date %></p>
-              <p class="card-title"><%= visit.chimist %></p>
-              <p class="card-title"><%= visit.cost %></p>
-            </div>
-          </a>
-        </div>
-      <% }) %>
-      <% }) %>
-      <% areafour.forEach((v,i) => { %>
-      <% v.forEach(visit => { %>
-        <div class="card container-xl <%= visit.stat %> ">
-          <a href="/visits/print/<%= visit._id %> " class="edit">
-            <div class="card-body ">
-              <h6 class="card-title"><%= visit.name %></h6>
-              <p class="card-title"><%= visit.ragion %></p>
-              <p class="card-title"><%= visit.phoneNum1 %></p>
-              <% let time= '' %> <% if (visit.time.length===13) { %> <%
-              time=visit.time.slice(2) %> <% } else { %> <%
-              time=visit.time.slice(-9) %> <% } %>
-              <p class="card-title"><%= time %></p>
-              <p class="card-title"><%= visit.date %></p>
-              <p class="card-title"><%= visit.chimist %></p>
-              <p class="card-title"><%= visit.cost %></p>
-            </div>
-          </a>
-        </div>
-      <% }) %>
-      <% }) %>
-      <% swaps.forEach((v,i) => { %>
-      <% v.forEach(visit => { %>
-        <div class="card container-xl <%= visit.stat %>">
-          <a href="/visits/print/<%= visit._id %> " class="edit">
-            <div class="card-body">
-              <h6 class="card-title"><%= visit.name %></h6>
-              <p class="card-title"><%= visit.ragion %></p>
-              <p class="card-title"><%= visit.phoneNum1 %></p>
-              <% let time= '' %> <% if (visit.time.length===13) { %> <%
-              time=visit.time.slice(2) %> <% } else { %> <%
-              time=visit.time.slice(-9) %> <% } %>
-              <p class="card-title"><%= time %></p>
-              <p class="card-title"><%= visit.date %></p>
-              <p class="card-title"><%= visit.chimist %></p>
-              <p class="card-title"><%= visit.cost %></p>
-            </div>
-          </a>
-        </div>
-      <% }) %>
-      <% }) %>
-      <% } %>
+        </a>
+      </div>
+      <% }) %> <% }) %> <% areatwo.forEach((v,i) => { %> <% v.forEach(visit => {
+      %>
+      <div class="card container-xl <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
+          </div>
+        </a>
+      </div>
+      <% }) %> <% }) %> <% areathree.forEach((v,i) => { %> <% v.forEach(visit =>
+      { %>
+      <div class="card container-xl <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
+          </div>
+        </a>
+      </div>
+      <% }) %> <% }) %> <% areafour.forEach((v,i) => { %> <% v.forEach(visit =>
+      { %>
+      <div class="card container-xl <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
+          </div>
+        </a>
+      </div>
+      <% }) %> <% }) %> <% swaps.forEach((v,i) => { %> <% v.forEach(visit => {
+      %>
+      <div class="card container-xl <%= visit.stat %>">
+        <a href="/visits/print/<%= visit._id %> " class="edit">
+          <div class="card-body">
+            <h6 class="card-title"><%= visit.name %></h6>
+            <p class="card-title"><%= visit.ragion %></p>
+            <p class="card-title"><%= visit.phoneNum1 %></p>
+            <% let time= '' %> <% if (visit.time.length===13) { %> <%
+            time=visit.time.slice(2) %> <% } else { %> <%
+            time=visit.time.slice(-9) %> <% } %>
+            <p class="card-title"><%= time %></p>
+            <p class="card-title"><%= visit.date %></p>
+            <p class="card-title"><%= visit.chimist %></p>
+            <p class="card-title"><%= visit.cost %></p>
+          </div>
+        </a>
+      </div>
+      <% }) %> <% }) %> <% } %>
     </article>
-  
+
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
