--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
       <% } else { %>
       <div class="logo-cont">
         <div class="logo">
-          <img src="/images/logo.png" alt="" />
+          <img src="/public/images/Logo.png" alt="" />
           <p>testing Lorem ipsum dolor</p>
         </div>
       </div>
@@ -184,6 +184,12 @@
       </div>
       <% }) %> <% }) %> <% } %>
     </article>
+    <div class="anlaysis">
+      <div class="container">
+        <p style="display: inline"><%= visits.length %></p>
+        <h6 style="display: inline">اجمالي الزيارات</h6>
+      </div>
+    </div>
 
     <script src="/javascripts/main.js"></script>
   </body>
