--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,10 +70,11 @@ article {
 }
 .card:hover {
   background-color: #f0f6fd;
+  padding-left: 0px;
 }
 .card-title {
   margin-bottom: 0px !important;
-  font-size: medium !important;
+  font-size: 18px !important;
 }
 
 .count {
