--- a/views/visits/_form_feild.ejs
+++ b/views/visits/_form_feild.ejs
@@ -110,16 +110,7 @@
 
 <!-- الوقت  -->
 <div class="input-group mb-3">
-  <!-- <input
-    class="form-control mp-3"
-    placeholder="تاريخ القيام بالزياره"
-    id="time"
-    type="number"
-    name="time"
-    required
-    value="<%= visit.time %>"
-  /> -->
-  <select class="form-select" aria-label="Default select example" name="time" required>
+  <select class="form-select" aria-label="Default select example" name="time">
     <option selected><%= visit.time %></option>
     <option value="0-8:00-8:30">8:00-8:30</option>
     <option value="1-9:00-9:30">9:00-9:30</option>
@@ -155,24 +146,24 @@
     value="<%= visit.creater %>"
     required
   />
-  <select name="chimist" class="form-select"  required id="">
-    <option value='علاء عبد النعيم'> علاء عبد النعيم</option>
-    <option value='عمر يوسف'> عمر يوسف</option>
-    <option value='السيد عطية'> السيد عطية</option>
-    <option value='السيد احمد'> السيد احمد</option>
-    <option value='محمود السيد'> محمود السيد</option>
-    <option value='إبراهيم أحمد'> إبراهيم أحمد</option>
-    <option value='مصطفي فوزي'> مصطفي فوزي</option>
-    <option value='بيتر وليم'> بيتر وليم</option>
-    <option value='كيرلس جاب الله'> كيرلس جاب الله</option>
-    <option value='فادي صبري'> فادي صبري</option>
-    <option value='عبده محمود'> عبده محمود</option>
-    <option value='نجلاء'> نجلاء</option>
-    <option value='نسمة'> نسمة</option>
-    <option value='محمد يوسف'> محمد يوسف</option>
-    <option value='-_-'> -_-</option>
+  <select name="chimist" class="form-select" required id="">
+    <option selected><%= visit.chimist %></option>
+    <option value="علاء عبد النعيم">علاء عبد النعيم</option>
+    <option value="عمر يوسف">عمر يوسف</option>
+    <option value="السيد عطية">السيد عطية</option>
+    <option value="السيد احمد">السيد احمد</option>
+    <option value="محمود السيد">محمود السيد</option>
+    <option value="إبراهيم أحمد">إبراهيم أحمد</option>
+    <option value="مصطفي فوزي">مصطفي فوزي</option>
+    <option value="بيتر وليم">بيتر وليم</option>
+    <option value="كيرلس جاب الله">كيرلس جاب الله</option>
+    <option value="فادي صبري">فادي صبري</option>
+    <option value="عبده محمود">عبده محمود</option>
+    <option value="نجلاء">نجلاء</option>
+    <option value="نسمة">نسمة</option>
+    <option value="محمد يوسف">محمد يوسف</option>
+    <option value="-_-">-_-</option>
   </select>
-  
 </div>
 
 <div class="input-group mb-3">
@@ -225,7 +216,7 @@
   />
   <label class="form-check-label" for="inlineRadio3">Normal</label>
 </div>
-<div class="form-check form-check-inline">
+<!-- <div class="form-check form-check-inline">
   <input
     class="form-check-input"
     type="radio"
@@ -235,7 +226,7 @@
     required
   />
   <label class="form-check-label" for="inlineRadio4">Dleat</label>
-</div>
+</div> -->
 <div class="form-check form-check-inline">
   <input
     class="form-check-input"
